--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^10.2.7",
     "@angular/animations": "~10.0.11",
     "@angular/common": "~10.0.11",
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.11",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "@ngez/core": "^5.0.1",
+    "@ngrx/effects": "^10.1.2",
+    "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
+    "ngrx-etc": "^4.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
